content/xul/document/src/nsXULDocument.h
@@ -364,8 +364,6 @@ public:
     NS_IMETHOD    GetCharacterSet(nsString& aCharacterSet);
     NS_IMETHOD    CreateElementWithNameSpace(const nsString& aTagName, const nsString& aNameSpace, nsIDOMElement** aResult);
     NS_IMETHOD    CreateRange(nsIDOMRange** aRange);
-    NS_IMETHOD    GetWidth(PRInt32* aWidth);
-    NS_IMETHOD    GetHeight(PRInt32* aHeight);
     NS_IMETHOD    Load (const nsString& aUrl);
     NS_IMETHOD    GetPlugins(nsIDOMPluginArray** aPlugins);
 
