rdf/content/public/nsIDOMXULDocument.h
@@ -50,6 +50,10 @@ public:
 
   NS_IMETHOD    GetCommandDispatcher(nsIDOMXULCommandDispatcher** aCommandDispatcher)=0;
 
+  NS_IMETHOD    GetWidth(PRInt32* aWidth)=0;
+
+  NS_IMETHOD    GetHeight(PRInt32* aHeight)=0;
+
   NS_IMETHOD    GetControls(nsIDOMHTMLCollection** aControls)=0;
 
   NS_IMETHOD    GetElementsByAttribute(const nsString& aName, const nsString& aValue, nsIDOMNodeList** aReturn)=0;
@@ -64,6 +68,8 @@ public:
   NS_IMETHOD    GetTooltipNode(nsIDOMNode** aTooltipNode);  \
   NS_IMETHOD    SetTooltipNode(nsIDOMNode* aTooltipNode);  \
   NS_IMETHOD    GetCommandDispatcher(nsIDOMXULCommandDispatcher** aCommandDispatcher);  \
+  NS_IMETHOD    GetWidth(PRInt32* aWidth);  \
+  NS_IMETHOD    GetHeight(PRInt32* aHeight);  \
   NS_IMETHOD    GetControls(nsIDOMHTMLCollection** aControls);  \
   NS_IMETHOD    GetElementsByAttribute(const nsString& aName, const nsString& aValue, nsIDOMNodeList** aReturn);  \
   NS_IMETHOD    Persist(const nsString& aId, const nsString& aAttr);  \
@@ -76,6 +82,8 @@ public:
   NS_IMETHOD    GetTooltipNode(nsIDOMNode** aTooltipNode) { return _to GetTooltipNode(aTooltipNode); } \
   NS_IMETHOD    SetTooltipNode(nsIDOMNode* aTooltipNode) { return _to SetTooltipNode(aTooltipNode); } \
   NS_IMETHOD    GetCommandDispatcher(nsIDOMXULCommandDispatcher** aCommandDispatcher) { return _to GetCommandDispatcher(aCommandDispatcher); } \
+  NS_IMETHOD    GetWidth(PRInt32* aWidth) { return _to GetWidth(aWidth); } \
+  NS_IMETHOD    GetHeight(PRInt32* aHeight) { return _to GetHeight(aHeight); } \
   NS_IMETHOD    GetControls(nsIDOMHTMLCollection** aControls) { return _to GetControls(aControls); } \
   NS_IMETHOD    GetElementsByAttribute(const nsString& aName, const nsString& aValue, nsIDOMNodeList** aReturn) { return _to GetElementsByAttribute(aName, aValue, aReturn); }  \
   NS_IMETHOD    Persist(const nsString& aId, const nsString& aAttr) { return _to Persist(aId, aAttr); }  \
